SolutionUpdate
Update Solutions